# Compvis

./: .gitignore
HW1/: Makefile  hw1.cpp  hw2.cpp
HW2/: CMakeLists.txt  hw2utils.cpp  hw2utils.hpp  t01.cpp  t02.cpp  t03.cpp
HW3/: CMakeLists.txt  hw3utils.cpp  hw3utils.hpp  t01.cpp  t02.cpp  t03.cpp  t04.cpp
HW3/results/: t01-output.txt  t02-output.txt  t03-output.txt  t04-output.txt
HW4/: CMakeLists.txt  t01.cpp  t02.cpp  t03.cpp  t04.cpp
HW4/results/: t01-output.txt  t02-output.txt  t03-output.txt
